fix bug of software developer being slightly too big of a font on mobile

--- a/server/public/css/dark/media.css
+++ b/server/public/css/dark/media.css
@@ -98,6 +98,10 @@
     margin-block-start: 0.5rem;
     margin-block-end: 0.5rem;
   }
+
+  .job {
+    font-size: 1.75rem;
+  }
 }
 
 /* CSS styles for very small screens */
